feat: 增加 README.md 英文版介绍.